fix collecting toList